# ucl-solkoff

./: .dockerignore  .gitignore  .railwayignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Procfile  RATE_LIMITING.md  README.md  SETUP.md  agent_task.txt  deploy.sh  fix.py  nixpacks.toml  playoff-styles.css  pyproject.toml  railway.json  railway.toml  render-log.sh  render_logs.txt  styles.css
.github/workflows/: deploy.yml
backend/: api_cache.py  api_client.py  data_service.py  database.py  elo_calculator.py  football_txt_parser.py  github_data_fetcher.py  main.py  playoff_analyzer.py  scheduler.py  solkoff_calculator.py  team_matcher.py  uefa_draws_scraper.py
data/: ucl_data.duckdb
frontend/: app.js  index.html  index.html.bak  playoff-styles.css  styles.css
tests/backend/: test_api_client.py  test_backend_data_integration.py  test_data_service.py  test_database.py  test_elo_calculator.py  test_main.py  test_scheduler.py  test_solkoff_calculator.py
